--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,29 @@ body {
   font-family: "Manrope", sans-serif;
 }
 
+.swiper-pagination-bullet{
+  width: 12px !important;
+  height: 12px !important;
+}
+
+.swiper{
+  padding-bottom: 70px !important;
+}
+
+.swiper-slide.swiper-slide-next{
+  background: #0067ff;
+  border-radius: 12px;
+  box-shadow: 0px 20px 70px rgba(0, 103, 255, 0.3) !important;
+
+}
+.swiper-slide.swiper-slide-next h4,
+.swiper-slide.swiper-slide-next p{
+  color: #fff !important;
+}
+.swiper-pagination{
+  top:90% !important;
+}
+
 .sticky__header{
   width: 100%;
   height: 80px;
