--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,18 @@
     section {
         @apply py-[75px];
     }
+    table{
+
+    }
+    th,td{
+        @apply py-3 px-2.5 text-sm text-left border-y border-gray-200;
+    }
+    thead{
+        @apply bg-neutral-100;
+    }
+    th{
+        @apply font-semibold;
+    }
 }
 
 @layer components {
